--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/module-alias": "^2.0.4",
     "nodemon": "^3.1.9",
     "typescript": "^5.7.3"
   },
   "_moduleAliases": {
     "@src": "src",
+    "@middlewares": "src/api/middlewares",
     "@user": "src/api/resources/user",
-    "@enums": "src/api/types/enums",
-    "@types": "src/api/types/types"
+    "@auth": "src/api/resources/auth",
+    "@enums": "src/api/types/enums/*",
+    "@interfaces": "src/api/types/interfaces"
   },
   "dependencies": {
-    "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jade-bootstrap": "^1.0.14",
     "jsonwebtoken": "^9.0.2",
